seventh commit: fixed the spacing between the computer and the text below

--- a/style.css
+++ b/style.css
@@ -138,11 +138,14 @@ header{
 .computer__wrap{
     width: 1000px;
     height: 100vh;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    /* display: flex; */
+    /* grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    grid-column-gap: 250px;
+    grid-column-gap: 250px; */
     margin: 100px 0 100px 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
 
 .track__container{
@@ -162,9 +165,15 @@ header{
     font-weight: 400;
 }
 
+.track__body{
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+}
+
 .track__img{
-    grid-column: 1/3;
-    grid-row: 2/5;
+    /* grid-column: 1/3;
+    grid-row: 2/5; */
     margin-top: 50px;
 }
 .track__img img{
@@ -172,10 +181,24 @@ header{
     height: 400px;
     object-fit: fill;
 }
+ 
+
+.track__content{
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+}
 
 .quick__srch{
     margin-top: 110px;
     width: 100%;
+}
+
+.quick__srch h2,
+.icloud h2,
+.history h2{
+    font-size: 1.8rem;
+    margin-bottom: 20px;
 }
 .quick__srch p,
 .icloud p,
@@ -186,9 +209,9 @@ header{
     font-weight: 400;
     line-height: 1.5;
 }
-.icloud{
+/* .icloud{
     margin-top: 50px;
-}
+} */
 
 /* /// section two */
 .sec-02{
@@ -416,7 +439,7 @@ footer{
 }
 
 /* #### @media 480px #### */
-@media (max-width: 480px) {
+@media (max-width: 770px) {
     body{
         width: 100%;
     }
@@ -453,11 +476,11 @@ footer{
 
     .computer__wrap{
         width: 100%;
-        height: 100%;
+        /* height: 100%; */
         margin: 0;
         padding: 80px 20px;
-        grid-row-gap: 30px;
-        grid-column-gap: 0px;
+        /* grid-row-gap: 30px; */
+        /* grid-column-gap: 0px; */
     }
     .track__container{
         width: 100%;
@@ -471,6 +494,9 @@ footer{
     .track__container p{
         width: 100%;
     }
+    .track__body{
+        flex-direction: column;
+    }
     .track__img {
         grid-column: 1/3;
         margin-top: 0px;
@@ -478,20 +504,24 @@ footer{
     .track__img img{
         width: 100%;
     }
+    /* .track__content{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: baseline;
+        row-gap: 30px;
+    } */
 
     /* quick srch */
     .quick__srch{
-        grid-column: 1/3;
         text-align: center;
         margin-top: 0px;
     }
     .icloud{
-        grid-column: 1/3;
         text-align: center;
         margin-top: 0px;
     }
     .history{
-        grid-column: 1/3;
         text-align: center;
     }
    
@@ -499,19 +529,20 @@ footer{
     .devices__wrap{
         width: 100%;
         margin-left: 0px;
+        margin-top: 600px;
+        margin-bottom: 30px;
     }
     .devices__wrap h2{
-        font-size: 21px;
+        font-size: 23px;
         width: 100%;
         margin-bottom: 30px;
     }
     .devices__wrap p{
-        width: 300px;
+        width: 100%;
         padding: 0 1rem;
     }
     .access__img {
         width: auto;
-        border: 5px solid black;
         z-index: 10;
     }
     .access__img img{
